--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_chat">ChatActivity</string>
     <string name="title_activity_log_in">LogInActivity</string>
+    <string name="title_activity_web_view_activity_test">WebViewActivity_test</string>
 
 </resources>
